--- a/src/index.html
+++ b/src/index.html
@@ -7,20 +7,20 @@
   <!-- <base href="/"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image /x-icon" href="favicon.ico">
-<<<<<<< HEAD
+<!-- <<<<<<< HEAD -->
   <link href="./assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="./assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="./assets/css/fonts.css" rel="stylesheet" type="text/css">
   <link href="./assets/vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
   <link href="./assets/css/stylish-portfolio.min.css" rel="stylesheet">
-=======
+<!-- ======= -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic"
     rel="stylesheet" type="text/css">
   <link href="assets/vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
   <link href="assets/css/stylish-portfolio.min.css" rel="stylesheet">
->>>>>>> 10094506b26a28b9eb7ca82526209177e44865cc
+<!-- >>>>>>> 10094506b26a28b9eb7ca82526209177e44865cc -->
 </head>
 
 <body>
