--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="description" content="Creative Optimum Solutions">
   <title>Creative Optimum Solution</title>
   <!-- <base href="/"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
