--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,11 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="Creative Optimum Solutions">
-  <title>Creative Optimum Solution</title>
-  <!-- <base href="/"> -->
+  <meta name="description" content="Creative Optimum Solutions: We are Melbourne based web development company. We provide multiple IT solutions including web development, web designing, API integration and Data Analysis.">
+  <title>COS: Web | Business | Data Solution Provider in Australia </title>
+  <base href="/home">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image /x-icon" href="favicon.ico">
-
   <link href="./assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="./assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="./assets/css/fonts.css" rel="stylesheet" type="text/css">
