--conact-page-design

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="description" content="Creative Optimum Solutions: We are Melbourne based web development company. We provide multiple IT solutions including web development, web designing, API integration and Data Analysis.">
-  <title>COS: Web | Business | Data Solution Provider in Australia </title>
+  <title>Web Design | Web development Provider in Australia </title>
   <base href="/home">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image /x-icon" href="favicon.ico">
