--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="Creative Optimum Solutions: We are Melbourne based web development company. We provide multiple IT solutions including web development, web designing, API integration and Data Analysis.">
+  <meta name="description"
+    content="Creative Optimum Solutions: We are a web development and solutions provider for small, medium, and large-scale web applications. We founded in 2018 with a vision of developing solutions for small-scale business partners and startups like us to provide excellent services, seamless experience, and end-to-end journey while developing and designing your business's digital identity. We can provide multiple solutions for businesses like restaurants, e-commerce, and educational organizations to build robust and fast applications. As we are creative, optimistic, and keen to contribute to Information and Technology, we encourage and provide consultation for free with hands-on solutions for your businesses.">
   <title>Web Design | Web development Provider in Australia </title>
   <base href="/home">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,7 +14,7 @@
   <link href="./assets/css/fonts.css" rel="stylesheet" type="text/css">
   <link href="./assets/vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
   <link href="./assets/css/stylish-portfolio.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
@@ -22,8 +23,26 @@
     rel="stylesheet" type="text/css">
   <link href="assets/vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
   <link href="assets/css/stylish-portfolio.min.css" rel="stylesheet">
-  <link href="./assets/css/stylish-portfolio.min.css" rel="stylesheet"> 
+  <link href="./assets/css/stylish-portfolio.min.css" rel="stylesheet">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-220540605-1">
+  </script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
+    gtag('config', 'UA-220540605-1');
+  </script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-G3K03BRSH3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-G3K03BRSH3');
+  </script>
 </head>
 
 <body>
